2012-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* lisp/gnuplot.el: elisp is now getting serious about a syntax change
	announced 10+ years ago.   s/(` (/`(/

	* src/graphics.c:  Incorrect default layout of rotated xtic labels.
	Bug #3568817

2012-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/post.trm:
	Handle transparent fill patterns in PS_fillbox() in the same way
	as is already done in PS_filled_polygon().
	Bug #3567035

	* src/eval.c (fill_gpval_axis):  Do not swap axis min/max values when
	storing them for later mousing calculations by the canvas, svg, and
	other terminals.  Fixes bug in the mouse readout from reversed axes.

2012-09-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Index histogram stacks using the point's index rather
	than its x coordinate. Fixes rowstacked histogram array overflow.
	Bug #3566662

2012-09-07  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* configure.in src/Makefile.am src/qtterminal/QtGnuplotWidget.cpp 
	src/qtterminal/QtGnuplotWidget.h src/qtterminal/qt_term.cpp
	src/qtterminal/qt_term_mac.m src/qtterminal/QtGnuplotScene.cpp:
	Backport recent OSX-related Qt modifications from 4.7 to 4.6.1.

2012-09-07  Thomas Orgis  <sobukus@users.sourceforge.net>

	* src/qtterminal/QtGnuplotApplication.cpp src/wxterminal/wxt_gui.cpp:
	The wxt and qt terminals handle -persist by continuing execution of a
	forked thread after the main thread has exited.  However, anyone waiting
	on the main thread won't see it as finished unless the stdout and
	stderr streams inherited by the continuing process are closed.
	Bug #3309277

2012-09-06  Ethan A Merritt  <merritt@u.washington.edu>

	* Bump version to 4.6.1 in preparation for release

2012-09-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Output a column for variable color if it is used 
	in the plot command.

	* src/datafile.c src/datafile.h src/plot2d.c src/tabulate.c: