@@ -1,12 +1,12 @@
 ## Process this file with automake to produce Makefile.in -*-Makefile-*-
 AUTOMAKE_OPTIONS = foreign
 
-ELS = gnuplot-gui.el gnuplot.el info-look.20.2.el info-look.20.3.el
-ELCS = gnuplot.elc gnuplot-gui.elc @INFO_LOOK_ELC@
+ELS = gnuplot-gui.el gnuplot.el
+ELCS = gnuplot.elc gnuplot-gui.elc
 EXTRA_DIST = README.1st dot.el dotemacs gnuplot.el.old gpelcard.dvi gpelcard.pdf gpelcard.ps gpelcard.tex $(ELS)
 
 CLEANFILES = $(ELCS) gpelcard.pdf gpelcard.ps gpelcard.dvi gpelcard.log gpelcard.aux
-DISTCLEANFILES = info-look.el
+DISTCLEANFILES = 
 
 BYTEC = $(EMACS) -batch -q -no-site-file -l $(srcdir)/dot.el -f batch-byte-compile
 
